<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            android:background="@color/white"
            android:contentDescription="@string/contentbackbutton"
            />
        <TextView
            android:id="@+id/tv_edit_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/change_password"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="@dimen/header"
            android:textColor="@color/black"
            />


    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            >
            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:visibility="visible"
                android:visibility="gone"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_old_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:endIconMode="password_toggle"
                app:placeholderTextColor="@color/secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_old_password"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_old_password"
                    android:fontFamily="@font/poppinsmedium"
                    android:textSize="@dimen/content"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:inputType="textPassword"

                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_new_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:endIconMode="password_toggle"
                app:placeholderTextColor="@color/secondary"
                app:layout_constraintTop_toBottomOf="@id/tf_old_password"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_new_password"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_new_password"
                    android:fontFamily="@font/poppinsmedium"
                    android:textSize="@dimen/content"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_repassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:endIconMode="password_toggle"
                app:placeholderTextColor="@color/secondary"
                app:layout_constraintTop_toBottomOf="@id/tf_new_password"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_repassword"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:hint="@string/re_enter_new_password"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:textSize="@dimen/content" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintStart_toStartOf="@id/tf_repassword"
                app:layout_constraintTop_toBottomOf="@id/tf_repassword">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_batal"
                    style="@style/ThemeOverlay.Material3.Button"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:text="@string/cancel"
                    app:backgroundTint="@color/gray"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_edit"
                    style="@style/ThemeOverlay.Material3.Button"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:text="@string/save"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_batal"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>