<resources>
    <string name="app_name">Preloved App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="content_login">Welcome to PreLoved App, Please Login Before Use Application.</string>
    <string name="no_have_account">Didn`t Have Account? <b><font color='#EE839F'>Register</font></b></string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="sell">Sell</string>
    <string name="sale">Sale</string>
    <string name="account">Account</string>
    <string name="search_hint">Search your preloved.....</string>
    <string name="category">Category</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="contentbackbutton">backbutton</string>
    <string name="tv_register">Register</string>
    <string name="tv_register_detail">Please register your identity before use Preloved.</string>
...
    <string name="your_phone_number">Your Phone Number</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="register">Register</string>
    <string name="sudah_memiliki_akun_login">Already Have Account?  <b><font color='#EE839F'>Login</font></b></string>
    <string name="akun">Account</string>
    <string name="ubah_profile">Change Profile</string>
    <string name="keluar">Logout</string>
    <string name="version_app">Version 1.0.0</string>
    <string name="enter_your_city">Enter Your City</string>
    <string name="add">Add</string>
    <string name="ubah">Change</string>
    <string name="data_produk">Product Data</string>
    <string name="nama_produk">Product Name</string>
...
    <string name="date">18 Jul, 10:42</string>
    <string name="dummy_title_product">Jam Tangan Casio</string>
    <string name="rp_400_000">Rp.400.000</string>
    <string name="berhasil_di_rp_200_000">Berhasil di Rp 200.000</string>
    <string name="notif_message">Pesan Notif</string>
    <string name="product_offer">Product Offer</string>
    <string name="change_password">Change Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="list_product">List Product</string>
    <string name="products">Products</string>
    <string name="interested">Interested</string>
    <string name="selled">Selled</string>
    <string name="no_products">No Product Show, Add First</string>
    <string name="seller_name">Seller Name</string>
...
    <string name="wrong_password">Wrong Password</string>
    <string name="OK">OK</string>
    <string name="success_edit_password">Successfully Edit Your Password</string>
    <string name="message_cant_edit_product">You\'re Cannot Edit Selled Product or Offered Product</string>
    <string name="message_complate_account">Please Complate Your Indentity First Before Sell Product</string>
    <string name="message_want_delete_product">Are You Sure Want Delete This Product?</string>
    <string name="sure">Sure</string>
    <string name="message_product_success">Product Successfully Add.</string>
    <string name="message_edit_product">Successfully Edit Product</string>
    <string name="message_delete_product">Successfully Delete Product</string>
    <string name="message_exit">Are You Sure Want Logout?</string>
    <string name="add_0">Add \n Product (0/5)</string>
    <string name="add_1">Add \n Product (1/5)</string>
...
