<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:id="@+id/tv_header_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/login"
            android:textSize="@dimen/header"
            android:textColor="@color/black"
            android:fontFamily="@font/poppinssemibold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_content_login"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/content_login"
            android:textSize="@dimen/content"
            android:textColor="@color/black"
            android:fontFamily="@font/poppinsregular"
            app:layout_constraintTop_toBottomOf="@id/tv_header_login"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:errorEnabled="true"
            app:placeholderTextColor="@color/secondary"
            app:layout_constraintTop_toBottomOf="@id/tv_content_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="@dimen/content"
                android:hint="@string/email"
                android:maxLines="1"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:placeholderTextColor="@color/secondary"
            app:layout_constraintTop_toBottomOf="@id/tf_email"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="@dimen/content"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingVertical="16dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="@dimen/subcontent"
            android:fontFamily="@font/poppinsmedium"
            app:cornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@id/tf_password"/>

        <TextView
            android:id="@+id/tv_no_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/no_have_account"
            android:textSize="@dimen/subcontent"
            android:fontFamily="@font/poppinsregular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>