...
            app:layout_constraintTop_toBottomOf="@id/tv_change_profile"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            app:layout_constraintTop_toBottomOf="@id/tv_change_profile"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="@dimen/content"
...
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keluar"
            app:layout_constraintTop_toBottomOf="@id/line4"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="@dimen/content"
...
